Refactored for Open JDK 1.8.0_345 compatibility.